# oscars-rsotc-ingestion-pipeline

./: .cruft.json  .gitignore  Dockerfile  README.md  data_dictionary.md  pixi.toml  pyproject.toml  testing_local.md
docs/: conf.py  index.rst  installation.rst  usage.rst
ingestion_pipeline/: __init__.py  cli.py  derived_indices.py  ingestion.py
ingestion_pipeline/data/derived_indices/: available_indices.py  temporal_combiner.py
ingestion_pipeline/data/download/: generate_requests.py  request_static_info.py
ingestion_pipeline/provenance/: builder.py  docstring.py  engine.py  engine.py.0  log.py  main.py  reader.py
ingestion_pipeline/publication/: main.py  zenodo.py
ingestion_pipeline/resources/: NUTS_RG_60M_2024_4326_LEVL_0.geojson  NUTS_RG_60M_2024_4326_LEVL_1.geojson  NUTS_RG_60M_2024_4326_LEVL_2.geojson  NUTS_RG_60M_2024_4326_LEVL_3.geojson  ro-crate-metadata.json
ingestion_pipeline/utilities/: chunking.py  constants.py  filename.py  logging_config.py  netcdf_utils.py  param_info.py  s3_handlers.py  spatial_agg.py  temporal_agg.py  zarr_utils.py  zip_utils.py
scripts/data/: analyze_derived_indices.py  compare_zarr_updates.py  compute_derived_indices.py  download_data_era5.py  open_zarr.py  run_ingestion_verification.py  update_data_era5.py
scripts/provenance/: README_crate.md  generate_crate.py  render_static_config.py
scripts/publication/: publish_to_zenodo.py
templates/provenance/: static_info.yaml.j2
tests/integration/: test_derived_indices.py  test_era5_ingestion_pipeline.py  test_publish_workflow.py
tests/unit/: test_chunking.py  test_cleanup.py  test_derived_indices_api.py  test_download_era5.py  test_filename.py  test_netcdf_utils.py  test_param_info.py  test_publication_main.py  test_renaming_dimensions.py  test_s3_handlers.py  test_spatial_agg.py  test_temporal_agg.py  test_zarr_utils.py  test_zenodo.py  test_zip_utils_extra.py
(+19 files in other folders)
